--- a/app/src/main/res/layout/cocktail_fragment.xml
+++ b/app/src/main/res/layout/cocktail_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="250dp"
+<LinearLayout android:id="@+id/fragmentLayout" xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="250dp"
     android:layout_height="100dp">
 
     <com.google.android.material.card.MaterialCardView
@@ -10,8 +11,6 @@
         android:layout_marginLeft="@dimen/mtrl_card_spacing"
         android:layout_marginTop="@dimen/mtrl_card_spacing"
         android:layout_marginRight="@dimen/mtrl_card_spacing">
-
-        <!-- TODO: Update blank fragment layout -->
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -28,6 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
+
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
